both sides can attack, need attack order, text display, and win lost

--- a/index.html
+++ b/index.html
@@ -21,8 +21,15 @@
 
     <div class="container">
         <div class="jumbotron" id="top-box">
+
           <div class="text-center" id="selection-box"></div>
           <div class="text-center" id="image-box"></div>
+          <div id='enemy-hp-bar'>
+              <!-- <div class="progress"></div> -->
+          </div>
+          <div id="player-hp-bar">
+              <!-- <div class="progress"></div> -->
+          </div>
 
         <!-- <img src="assets/images/oak.png" alt="Professor Oak" id="prof-oak"> -->
        <!--      <div class="row">
