--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <div id="player-hp-bar">
               <!-- <div class="progress"></div> -->
           </div>
-
+          <div id="hp-display"></div>
         <!-- <img src="assets/images/oak.png" alt="Professor Oak" id="prof-oak"> -->
        <!--      <div class="row">
                 <div class="col-sm-4">
