--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
   <meta charset="UTF-8">
     <title>Pokemon RPG</title>
-
+   <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   <!-- Bootstrap CSS -->
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
   <!-- Optional theme -->
