--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
   <meta charset="UTF-8">
-    <title>Pokemon RPG</title>
+    <title>Pokemon Battle</title>
    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   <!-- Bootstrap CSS -->
 
@@ -41,7 +41,7 @@
         <div id='icon-spot'></div>
       </div>
     </div>
-    
+
     <script src="https://code.jquery.com/jquery-3.1.1.min.js">    </script>
     <script type="text/javascript" src="./assets/javascript/game.js"></script>
     <script type="text/javascript" src="./assets/javascript/typed.js"></script>
